// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shift 1`] = `
[
  {
    "op": "replace",
    "path": [
      "a",
      0,
    ],
    "value": {
      "i": 2,
    },
  },
  {
    "op": "replace",
    "path": [
      "a",
      2,
    ],
    "value": {
      "i": 0,
    },
  },
  {
    "op": "add",
    "path": [
      "a",
      3,
    ],
    "value": {
      "i": 42,
    },
  },
  {
    "op": "add",
    "path": [
      "a",
      4,
    ],
    "value": {
      "i": 41,
    },
  },
]
`;

exports[`shift 2`] = `
[
  {
    "op": "replace",
    "path": [
      "a",
      0,
    ],
    "value": {
      "i": 0,
    },
  },
  {
    "op": "replace",
    "path": [
      "a",
      2,
    ],
    "value": {
      "i": 2,
    },
  },
  {
    "op": "replace",
    "path": [
      "a",
      "length",
    ],
    "value": 3,
  },
]
`;
